# transcribe

./: .gitignore  README.md  install.sh  pyproject.toml  spec.md  transcribe  uninstall.sh
assets/: summarisation-prompt.md
gui/: files-pane.sh  labeling-pane.sh  main-window.sh  recording-pane.sh
lib/: config.sh  db.sh  process-recordings.sh  summarise-transcript.sh  transcribe-audio.sh  watcher.sh
scripts/: screenshots.py
src/: __init__.py  app.py  app.tcss  commands.py  models.py
src/core/: __init__.py  config.py  database.py  recorder.py  summarizer.py  transcriber.py
src/screens/: __init__.py  files.py  labeling.py  main_menu.py  recording.py  unified.py
src/widgets/: __init__.py
systemd/: transcribe-watcher.service
tests/: __init__.py  test_app.py  test_commands.py  test_config.py  test_database.py  test_models.py  test_transcriber.py  test_workflow.py
